--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "react-router-dom": "^6.26.2"
+
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
