--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-router-dom": "^6.26.2"
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1",
+  "react-router-dom": "^6.26.2",
+  "vite": "^5.4.0"
+},
 
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.441.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
