--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-  "react": "^18.3.1",
-  "react-dom": "^18.3.1",
-  "react-router-dom": "^6.26.2",
-  "vite": "^5.4.0"
-},
-
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
+  },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
@@ -23,3 +21,4 @@
     "vite": "^5.4.8"
   }
 }
+
