--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "stripe": "^16.0.0",
-    "@stripe/stripe-js": "^2.4.0"
+    "vite": "^5.4.0",
+    "@stripe/stripe-js": "^2.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
@@ -26,4 +26,5 @@
     "node": ">=18"
   }
 }
+
 
