--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "vite": "^5.4.0",
-    "@stripe/stripe-js": "^2.1.0"
+    "@stripe/stripe-js": "^2.1.0",
+    "stripe": "^16.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
@@ -22,9 +23,8 @@
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
   },
-  "engines": {
-    "node": ">=18"
-  }
+  "engines": { "node": ">=18" }
 }
+
 
 
