--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,18 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "cleanUrls": true,
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/((?!assets/|favicon.ico|robots.txt|manifest.webmanifest|sitemap.xml|api/|.*\\..*).*)",
+      "destination": "/"
+    }
+  ]
 }
-
 
