--- a/package.json
+++ b/package.json
@@ -3,26 +3,25 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "engines": { "node": ">=18" },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "@stripe/stripe-js": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "@stripe/stripe-js": "^3.4.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.4.8",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.7"
-  },
-  "engines": {
-    "node": ">=18"
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20"
   }
+}
 
 
