--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "engines": { "node": ">=18" },
   "dependencies": {
-    "@stripe/stripe-js": "^2.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "@stripe/stripe-js": "^2.4.0",
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
@@ -21,8 +21,12 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.21"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
 
+    
 
 
