--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
   "version": 2,
   "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs18.x"
-    }
+    "api/**/*.js": { "runtime": "nodejs18.x" }
   },
   "buildCommand": "vite build",
   "outputDirectory": "dist",
