--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
+  "name": "railquant-landing",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@stripe/stripe-js": "^2.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
+  },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "vite": "^5.4.21"
+    "tailwindcss": "^3.4.14",
+    "vite": "^5.4.6"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
