--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.js": { "runtime": "nodejs18.x" }
-  },
   "buildCommand": "vite build",
   "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  ],
+  "functions": {
+    "api/*.js": { "maxDuration": 10 }
+  }
 }
-
