--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,16 @@
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
+{
+  "headers": [
+    {
+      "source": "/(.*)\\.(png|jpg|jpeg|svg|gif|webp|ico)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    }
+  ]
+}
 
 
 
