--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "stripe": "^14.0.0"
+    "busboy:"^1.6.0
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
