--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3"
+    "@aws-sdk/client-s3": "^3.679.0", 
+    "@aws-sdk/s3-request-presigner": "^3.679.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
