--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "busboy": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
-    "@aws-sdk/client-s3": "^3.679.0", 
-    "@aws-sdk/s3-request-presigner": "^3.679.0"
+    "react-router-dom": "^6.22.3",
+    "@aws-sdk/client-s3": "^3.679.0",
+    "@aws-sdk/s3-request-presigner": "^3.679.0",
+    "busboy": "^1.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
@@ -24,4 +24,5 @@
     "vite": "^5.2.10"
   }
 }
+
 
